// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Statistic /> should render Statistic Record component 1`] = `
<Statistic
  title="Total Cost"
  value="99.00"
>
  <div
    data-component-type="statistic"
  >
    <styled.div>
      <StyledComponent
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bwzfXH",
              "isStatic": true,
              "lastClassName": "cHrMUA",
              "rules": Array [
                "
  margin-bottom: ",
                "4",
                "px;

 ",
                "
          font-size: ",
                "14",
                "px;
          line-height: ",
                "20",
                "px;
          letter-spacing: normal;
        ",
                "
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bwzfXH",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
      >
        <div
          className="cHrMUA"
        >
          Total Cost
        </div>
      </StyledComponent>
    </styled.div>
    <styled.span>
      <StyledComponent
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-htpNat",
              "isStatic": true,
              "lastClassName": "bNBzpE",
              "rules": Array [
                "
  color: ",
                "#262D33",
                ";
  font-weight: ",
                "600",
                ";

 ",
                "
          font-size: ",
                "24",
                "px;
          line-height: ",
                "32",
                "px;
          letter-spacing: -.02em;
        ",
                "
",
              ],
            },
            "displayName": "styled.span",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-htpNat",
            "target": "span",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
      >
        <span
          className="bNBzpE"
        >
          99.00
        </span>
      </StyledComponent>
    </styled.span>
  </div>
</Statistic>
`;

exports[`<Statistic /> should render a Statistic component with a prefix 1`] = `
<Statistic
  prefix="AUD"
  title="Total Cost"
  value="99.00"
>
  <div
    data-component-type="statistic"
  >
    <styled.div>
      <StyledComponent
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bwzfXH",
              "isStatic": true,
              "lastClassName": "cHrMUA",
              "rules": Array [
                "
  margin-bottom: ",
                "4",
                "px;

 ",
                "
          font-size: ",
                "14",
                "px;
          line-height: ",
                "20",
                "px;
          letter-spacing: normal;
        ",
                "
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bwzfXH",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
      >
        <div
          className="cHrMUA"
        >
          Total Cost
        </div>
      </StyledComponent>
    </styled.div>
    <styled.span>
      <StyledComponent
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": true,
              "lastClassName": "jfujsv",
              "rules": Array [
                "
  color: ",
                "#262D33",
                ";
  margin-right: ",
                "8",
                "px;
  font-weight: ",
                "600",
                ";

  ",
                "
          font-size: ",
                "18",
                "px;
          line-height: ",
                "24",
                "px;
          letter-spacing: -.02em;
        ",
                "
",
              ],
            },
            "displayName": "styled.span",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "span",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
      >
        <span
          className="jfujsv"
        >
          AUD
        </span>
      </StyledComponent>
    </styled.span>
    <styled.span>
      <StyledComponent
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-htpNat",
              "isStatic": true,
              "lastClassName": "bNBzpE",
              "rules": Array [
                "
  color: ",
                "#262D33",
                ";
  font-weight: ",
                "600",
                ";

 ",
                "
          font-size: ",
                "24",
                "px;
          line-height: ",
                "32",
                "px;
          letter-spacing: -.02em;
        ",
                "
",
              ],
            },
            "displayName": "styled.span",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-htpNat",
            "target": "span",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
      >
        <span
          className="bNBzpE"
        >
          99.00
        </span>
      </StyledComponent>
    </styled.span>
  </div>
</Statistic>
`;
